# CG_HW_A

./: .gitignore  CMakeLists.txt
src/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  SceneTree.cpp  SceneTree.h  Types.h  main.cpp  stb_impl.cpp
